V42-WIP存档: Core键控日志体系+V41修复累积
Core.loadDebugLogConfig重写: Gson真解析+主开关/8模块键(OR语义)+文件自建全false模板+解析失败兜底; 修复编辑残骸(旧loader双层闭合遗留5行); V41: FileManager.BIN_CACHE写后自失效/Data.invalidate/flushCachesAsync联动; GOAL-PLAN追加V41验证(出生点守卫实锤/扫描劣化/队列溢出184393)